--- a/CleaningApplication/Admin.Master
+++ b/CleaningApplication/Admin.Master
@@ -4,124 +4,149 @@
 
 <html>
 <head runat="server">
-    <title></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/bootstrap.css" rel="stylesheet" />
-<link href="css/style.css" rel="stylesheet"/>
-<link href="css/responsive.css" rel="stylesheet"/>
-  
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-.navbar {
-  overflow: hidden;
-  background-color: #333;
-  font-family: Arial, Helvetica, sans-serif;
-}
+	<title></title>
+   <style type="text/css">
+		ul{
+			list-style-type:none;
+			margin:0;
+			padding:0;
+			overflow:hidden;
+			background-color:#333;
+		}
 
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
+		li{
+			float:left;
+		}
 
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
+		li a, dropbtn{
+			display:inline-block;
+			color:white;
+			text-align:center;
+			padding: 14px 16px;
+			text-decoration:none;
+		}
 
-.dropdown .dropbtn {
-  cursor: pointer;
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
+		li a:hover, dropdown:hover, dropbtn{
+			background-color:red;
+		}
 
-.navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
-  background-color: red;
-}
+		li.dropdown
+		{
+			display:inline-block;
+		}
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
+		.dropdown-content{
+			display:none;
+			position:absolute;
+			background-color: #f9f9f9;
+			min-width:160px;
+			box-shadow:0px 8px 16px 0px rgba(0,0,0,0.2);
+		}
 
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
+		dropdown-content a{
+			color:black;
+			padding: 12px 16px;
+			text-decoration:none;
+			display:none;
+			text-align:center;
+		}
 
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
+		.dropdown-content a:hover{
+			background-color: #f1f1f1;
+		}
 
-.show {
-  display: block;
-}
-</style>
+		.dropdown:hover .dropdown-content{
+			display:block;
+
+		}
+
+		ul.topnav li a.active{
+			background-color:#4caf50;
+		}
+
+		li.right{
+			float:right;
+			background-color:red;
+		}
+
+		a.active{
+			background-color:#4CAF50;
+		}
+
+
+
+	</style>
 </head>
 <body>
+	
+	  
 
-<div class="navbar">
+  <%--  <div class="navbar">
+		 <a href="ProcessManagement.aspx">Process management</a>
+  <a href="ReviewManagement.aspx">Review manegement</a>
+	<div class="dropdown">
+  <button class="dropbtn">Panel Management</button>
+  <div class="dropdown-content">
+	<a href="PanelManagement.aspx">Home page</a>
+	<a href="AboutUsManagement.aspx">About us page</a>
+   
+  </div>
+</div>
+		<a href="ServicesManagement.aspx"> Services Management</a>
+	<a href="ServDetailsMang.aspx"> Services Details Management</a>
+	<a href="StaffManagement.aspx"> Staff Management</a>
+  
+	<a href="Default.aspx" style="font-style: italic; color: #FF0000"> Back to Website </a>
+		</div>--%>
+<%--<div class="navbar">
   <a href="ProcessManagement.aspx">Process management</a>
   <a href="ReviewManagement.aspx">Review manegement</a>
-    <a href="PanelManagement.aspx"> Panel management</a>
-    <a href="ServicesManagement.aspx"> Services Management</a>
-    <a href="ServDetailsMang.aspx"> Services Details Management</a>
-    <a href="StaffManagement.aspx"> Staff Management</a>
-    <a href="Default.aspx" style="font-style: italic; color: #FF0000"> Back to Website </a>
- <%-- <div class="dropdown">
-  <button class="dropbtn" onclick="myFunction()">Services management
-    <i class="fa fa-caret-down"></i>
+   <div class="dropdown">
+  <button class="dropbtn" onclick="myFunction()">Panel management
+	<i class="fa fa-caret-down"></i>
   </button>
   <div class="dropdown-content" id="myDropdown">
-    <a href="#">Add a new service</a>
-    <a href="#">Update/Delete a service</a>
-    
+	<a href="PanelManagement.aspx">Home page panel</a>
+	<a href="AboutUsManagement.aspx">About us panel</a>
+	
+  </div>
+  </div>--%>
+ 
+	
+ <%-- <div class="dropdown">
+  <button class="dropbtn" onclick="myFunction()">Services management
+	<i class="fa fa-caret-down"></i>
+  </button>
+  <div class="dropdown-content" id="myDropdown">
+	<a href="#">Add a new service</a>
+	<a href="#">Update/Delete a service</a>
+	
   </div>
   </div> --%>
-</div>
 
 
-    <div>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
-        </div>
-<script>
-/* When the user clicks on the button, 
-toggle between hiding and showing the dropdown content */
-function myFunction() {
-  document.getElementById("myDropdown").classList.toggle("show");
-}
+	<ul>
+		<li> <a class="active" href="#">Home</a></li>
+		<li> <a href="#"> Books</a></li>
+		<li class="dropdown">
+			<a href="javascript:void(0)" class="dropbtn"> Subjects</a>
+			<div class="dropdown-content">
+				<a href="#"> Link1</a>
+				<a href="#"> Link2</a>
+				<a href="#"> Link3</a>
+				<a href="#"> Link4</a>
+				<a href="#"> Link5</a>
+			</div>
+		</li>
+		<li class="right" > <a href="#about"> About us</a></li>
+	</ul>
+	
+			<asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+			</asp:ContentPlaceHolder>
 
-// Close the dropdown if the user clicks outside of it
-window.onclick = function(e) {
-  if (!e.target.matches('.dropbtn')) {
-  var myDropdown = document.getElementById("myDropdown");
-    if (myDropdown.classList.contains('show')) {
-      myDropdown.classList.remove('show');
-    }
-  }
-}
-</script>
 </body>
-    
-        
-    
+	
+		
+	
 
 </html>
