--- a/CleaningApplication/ServicesNested.master
+++ b/CleaningApplication/ServicesNested.master
@@ -1,4 +1,5 @@
 ﻿<%@ Master Language="C#" MasterPageFile="~/Home.Master" AutoEventWireup="true" CodeBehind="ServicesNested.master.cs" Inherits="CleaningApplication.ServicesNested" %>
+<%@ MasterType VirtualPath="~/Home.Master" %> 
 
 <asp:Content ID="Content2" ContentPlaceHolderID="ContentPlaceHolder1" runat="server">
 	<form runat="server">
