--- a/CleaningApplication/Admin.Master
+++ b/CleaningApplication/Admin.Master
@@ -101,25 +101,7 @@
 									
 								</li>
 								<li><a href="AboutUsManagement.aspx"> <asp:Label  ID="navabtus" runat="server" Text="About us mang"></asp:Label></a>
-									  <%--<ul>
-										<%--<li><a href="ServiceDetails?categoryid=1"> End of tenancy cleaning</a></li>
-									   <li><a href="ServiceDetails?categoryid=1"> End of tenancy cleaning</a></li>
-											<asp:DataList ID="DataList1" runat="server" DataSourceID="SqlDataSource1">
-												
-											<ItemTemplate>
-											  
-													<li>
-													 <a href="ServiceDetails?categoryid='<%#Eval("categoryid") %>">
-													
-													<asp:Label ID="categoryNameLabel" runat="server" Text='<%# Eval("categoryName") %>' />
-													</a></li>
-								  
-												   
-												</ItemTemplate>
-											
-											</asp:DataList>
-											
-									  </ul>--%>
+									
 									
 								</li>
 								<li ><a href="ProcessManagement.aspx"> <asp:Label  ID="navProcess" runat="server" Text="Process mang"></asp:Label></a>
@@ -130,7 +112,7 @@
 								</li>
 								<li class="dropdown"><a href="#"> <asp:Label  ID="navservices" runat="server" Text="Services mang"></asp:Label></a>
 									<ul>
-										<li><a href="AddReview.aspx">Add a new service</a></li>
+										<li><a href="AddNewService.aspx">Add a new service</a></li>
 										
 										<li><a href="ServicesManagement.aspx">Manage services</a></li>
 										<li><a href="ServDetailsMang.aspx">Manage services details</a></li>
@@ -139,7 +121,7 @@
 								</li>
                                 <li class="dropdown"><a href="#"> <asp:Label  ID="navStaff" runat="server" Text="Staff mang"></asp:Label></a>
 									<ul>
-										<li><a href="AddStaffManagement.aspx">Add a new staff</a></li>
+										<li><a href="AddNewStaff.aspx">Add a new staff</a></li>
 										<li><a href="StaffManagement.aspx">Edit or delete staff</a></li>
 									  
 									</ul>
@@ -218,46 +200,50 @@
 						
 						<div class="navbar-collapse collapse clearfix" id="navbarSupportedContent1">
 							<ul class="navigation clearfix">
-								<li ><a href="Default.aspx">Home</a>
-								   
-								</li>
-								<li ><a href="Services.aspx">Services</a>
-									<%--<ul>
-									   
-											<asp:DataList ID="DataList2" runat="server" DataSourceID="SqlDataSource1">
-												
-											<ItemTemplate>
-											  
-													<li>
-													 <a href="ServiceDetails?categoryid='<%#Eval("categoryid") %>">
-													
-													<asp:Label ID="categoryNameLabel" runat="server" Text='<%# Eval("categoryName") %>' />
-													</a></li>
-								  
-												   
-												</ItemTemplate>
-											
-											</asp:DataList>
-											
-									  </ul>--%>
-									 
-								
-								
-								<li ><a href="Process.aspx">Process</a>
+								<li><a  href="PanelManagement.aspx">
+                                    <asp:Label  ID="Label1" runat="server" Text="Panel mang"></asp:Label></a>
 									
 								</li>
-								<li ><a href="WhyUs.aspx">About Us</a>
+								<li><a href="AboutUsManagement.aspx"> <asp:Label  ID="Label2" runat="server" Text="About us mang"></asp:Label></a>
+									
 									
 								</li>
-								<li class="dropdown"><a href="Reviews.aspx">Our Reviews</a>
+								<li ><a href="ProcessManagement.aspx"> <asp:Label  ID="Label3" runat="server" Text="Process mang"></asp:Label></a>
+									
+								</li>
+								<li ><a href="ReviewManagement.aspx"> <asp:Label  ID="Label4" runat="server" Text="Review mang"></asp:Label></a>
+									
+								</li>
+								<li class="dropdown"><a href="#"> <asp:Label  ID="Label5" runat="server" Text="Services mang"></asp:Label></a>
 									<ul>
-										<li><a href="AddReview.aspx">Add a review</a></li>
-										<li><a href="Reviews.aspx">See all reviews</a></li>
+										<li><a href="AddReview.aspx">Add a new service</a></li>
+										
+										<li><a href="ServicesManagement.aspx">Manage services</a></li>
+										<li><a href="ServDetailsMang.aspx">Manage services details</a></li>
 									  
 									</ul>
 								</li>
-								<li><a href="ContactUs.aspx">Contact us</a></li>
-								<li> <a href="OurStories.aspx"> Our Stories</a></li>
+                                <li class="dropdown"><a href="#"> <asp:Label  ID="Label6" runat="server" Text="Staff mang"></asp:Label></a>
+									<ul>
+										<li><a href="AddNewStaff.aspx">Add a new staff</a></li>
+										<li><a href="StaffManagement.aspx">Edit or delete staff</a></li>
+									  
+									</ul>
+								</li>
+                                <li class="dropdown"><a href="#"> <asp:Label  ID="Label7" runat="server" Text="Client mang"></asp:Label></a>
+									<ul>
+										<li><a href="AddClientManagement.aspx">Add a new client</a></li>
+										<li><a href="ClientManagement.aspx">Edit or delet clients</a></li>
+									  
+									</ul>
+								</li>   
+                                <li class="dropdown"><a href="#"> <asp:Label  ID="Label8" runat="server" Text="Stories mang"></asp:Label></a>
+									<ul>
+									    <li><a href="AddStory.aspx">Add a story</a></li>
+										<li><a href="StoryManagement.aspx">Edit or delete stories</a></li>
+									  
+									</ul>
+								</li>
 							</ul>
 							</div>
 					</nav><!-- Main Menu End-->
@@ -401,8 +387,11 @@
 					
 					<div class="pull-left">
 						<div class="copyright"> &copy; All rights reserved <br> Certified cleaning company.</div>
+                        <asp:Label ID="Label9" runat="server" Text="Developed By - Aastha Goyal" ForeColor="DeepSkyBlue" Font-Bold="True"></asp:Label>
 					</div>
 					<div class="pull-right">
+                       
+					
 						<!--Scroll to top-->
 			<div class="scroll-to-top scroll-to-target" data-target="html"><span class="flaticon-next-5"></span></div>
 					</div>
