--- a/CleaningApplication/ServicesNested.master
+++ b/CleaningApplication/ServicesNested.master
@@ -3,6 +3,7 @@
 
 <asp:Content ID="Content2" ContentPlaceHolderID="ContentPlaceHolder1" runat="server">
 	<form runat="server">
+          <h1 style="visibility: hidden" > Cleaning services in Auckland</h1>
 	<section class="page-title" style="background-image:url(images/background/3.jpg)">
 		<div class="auto-container">
 	
